# secret_santa

./: .gitignore  Makefile  README.md  config_example.yml  pyproject.toml  secret_santa.py
