[tool.poetry]
name = "secret_santa"
version = "0.1.0"
description = ""
authors = ["chipfranzen <chip.franzen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
ipython = "^7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
